<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNotesFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title"
        android:textSize="50dp"/>
    <EditText
        android:id="@+id/ettitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Abc"
        android:textSize="30sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Description"
        android:textSize="50dp"/>

    <EditText
        android:id="@+id/etdescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Abc"
        android:textSize="30sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".AddNotesFragment"
        android:orientation="horizontal">

    <Button
        android:id="@+id/btnl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/L"
        android:textSize="30sp"
        android:layout_margin="20sp"/>
    <Button
        android:id="@+id/btnm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/M"
        android:textSize="30sp"
        android:layout_margin="20sp"/>
    <Button
        android:id="@+id/btnh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/H"
        android:textSize="30sp"
        android:layout_margin="20sp"/>
</LinearLayout>

    <Button
        android:id="@+id/btnsave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Save"
        android:textSize="30sp"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/tvtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pick_Time"
        android:textSize="20dp"
        android:layout_gravity="right"/>
    <TextView
        android:id="@+id/tvdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pick_Date"
        android:textSize="20dp"
        android:layout_gravity="right"/>
    <Button
        android:id="@+id/btntodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Todo"/>

</LinearLayout>